--- a/templates/wagtailadmin/shared/main_nav.html
+++ b/templates/wagtailadmin/shared/main_nav.html
@@ -13,9 +13,9 @@
             </div>
 
             <ul class="footer-submenu">
+                <li><a href="{% url 'wagtailadmin_account' %}" class="icon icon-user">{% trans "Account settings" %}</a></li>
                 <li><a href="{% url 'wagtailadmin_logout' %}" class="icon icon-logout">{% trans "Log out" %}</a></li>
             </ul>
-
         </li>
     </ul>
 </nav>
