--- a/templates/wagtailadmin/base.html
+++ b/templates/wagtailadmin/base.html
@@ -2,5 +2,7 @@
 {% load static %}
 
 {% block branding_logo %}
+    {% if active_client and active_client.logo %}
     <img src="{{ active_client.logo.url }}" alt="{{ active_client.name }}" width="80" />
+    {% endif %}
 {% endblock %}
