--- a/templates/wagtailadmin/base.html
+++ b/templates/wagtailadmin/base.html
@@ -4,5 +4,6 @@
 {% block branding_logo %}
     {% if active_client and active_client.logo %}
     <img src="{{ active_client.logo.url }}" alt="{{ active_client.name }}" width="80" />
+    <h5>{{ active_plan.name }}</h5>
     {% endif %}
 {% endblock %}
