--- a/templates/wagtailadmin/login.html
+++ b/templates/wagtailadmin/login.html
@@ -1,5 +1,5 @@
 {% extends "wagtailadmin/admin_base.html" %}
-{% load wagtailadmin_tags i18n %}
+{% load wagtailimages_tags wagtailadmin_tags i18n %}
 {% block titletag %}{% trans "Sign in" %}{% endblock %}
 {% block bodyclass %}login{% endblock %}
 
@@ -27,7 +27,7 @@
         {% block above_login %}{% endblock %}
 
         {% if form.client and form.client.logo %}
-        <img src="{{ form.client.logo.url }}" alt="{{ form.client.name }}" width="128" />
+        {% image form.client.logo width-256 %}
         {% endif %}
 
         <h1>{% block branding_login %}{% if form.client and form.client.login_header_text %}{{ form.client.login_header_text }}{% else %}{% trans "Sign in to Kausal Watch" %}{% endif %}{% endblock %}</h1>
