--- a/notifications/mjml-templates/includes/modify_action_button.mjml
+++ b/notifications/mjml-templates/includes/modify_action_button.mjml
@@ -1,1 +1,3 @@
-<mj-button align="left" href="{{ person.admin_url }}{{ action.change_url }}">Muokkaa toimenpidettä</mj-button>
+<mj-button align="left" href="{{ person.admin_url }}{{ action.change_url }}">
+    <strong style="color: {{ theme.link_in_brand_bg_color }}">Muokkaa toimenpidettä</strong>
+</mj-button>
