Fix translation for actions summary item

--- a/actions/templates/site_summary/actions.html
+++ b/actions/templates/site_summary/actions.html
@@ -3,7 +3,7 @@
 <li class="icon icon-fa-cubes">
     <a href="{% url 'actions_action_modeladmin_index' %}">
     {% blocktrans count counter=total_actions with total_actions|intcomma as total %}
-        <span>{{ total }}</span> actions <span class="visuallyhidden">monitored in {{ plan.name }}</span>
+        <span>{{ total }}</span> action <span class="visuallyhidden">monitored in {{ plan.name }}</span>
     {% plural %}
         <span>{{ total }}</span> actions <span class="visuallyhidden">monitored in {{ plan.name }}</span>
     {% endblocktrans %}
