Implement support for filtering by responsible party in Wagtail admin

--- a/admin_site/static/css/wagtail_admin_overrides.css
+++ b/admin_site/static/css/wagtail_admin_overrides.css
@@ -198,3 +198,7 @@ expects main contact as 3rd element in container */
 .date_field .input::before, .date_time_field .input::before {
     pointer-events: none;
 }
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    background-color: #0A5E43 !important;
+}
