Implement better action list filtering in Wagtail

--- a/admin_site/static/css/wagtail_admin_overrides.css
+++ b/admin_site/static/css/wagtail_admin_overrides.css
@@ -202,3 +202,7 @@ expects main contact as 3rd element in container */
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
     background-color: #0A5E43 !important;
 }
+
+.alc__root {
+    background-color: #0A5E43 !important;
+}
