--- a/templates/wagtailadmin/login.html
+++ b/templates/wagtailadmin/login.html
@@ -32,6 +32,7 @@
 
         <h1>{% block branding_login %}{% if form.client and form.client.login_header_text %}{{ form.client.login_header_text }}{% else %}{% trans "Sign in to Kausal Watch" %}{% endif %}{% endblock %}</h1>
 
+        {% if form.client and form.client.azure_ad_tenant_id %}
         <a href="{% url 'auth_login' %}?next={{ request.GET.next }}">
             <button type="submit" class="button button-longrunning" data-clicked-text="{% trans 'Signing in…' %}" style="margin-bottom: 2em; margin-top: 4em">
                 <span class="icon icon-spinner"></span><em>{% if form.client and form.client.login_button_text %}{{ form.client.login_button_text }}{% else %}{% trans 'Sign in' %}{% endif %}</em>
@@ -39,8 +40,9 @@
         </a>
 
         <p><a href="#" id="password-signin-display-button" style="cursor: pointer; text-decoration: none; color: inherit">{% trans "If you have a separate password, click here to sign in" %}</a></p>
+        {% endif %}
 
-        <form id="password-signin-form" action="{% url 'wagtailadmin_login' %}" method="post" autocomplete="off" novalidate {% if not form.errors %} style="display: none; {% endif %}">
+        <form id="password-signin-form" action="{% url 'wagtailadmin_login' %}" method="post" autocomplete="off" novalidate {% if not form.errors and form.client.azure_ad_tenant_id %} style="display: none; {% endif %}">
             {% block login_form %}
             {% csrf_token %}
 
