Finish German translations for now and fix translations in other languages

--- a/documents/templates/wagtaildocs/chooser/chooser.html
+++ b/documents/templates/wagtaildocs/chooser/chooser.html
@@ -8,7 +8,7 @@
 {% if uploadform %}
     <ul class="tab-nav merged">
         <li class="active"><a href="#upload">{% trans "Upload from computer" %}</a></li>
-        <li><a href="#search">{% trans "Search from the service" %}</a></li>
+        <li><a href="#search">{% trans "Search the service" %}</a></li>
     </ul>
 {% endif %}
 
